// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommentForm create comment should not call api when comment form is invalid 1`] = `
<div>
  <div>
    <h5>
      Dodaj komentarz
    </h5>
    <form
      class="was-validated"
      novalidate=""
    >
      <div
        class="form-group"
      >
        <textarea
          class="form-control"
          id="commentContent"
          placeholder="Treść komentarza"
          required=""
        />
        <div
          class="invalid-feedback"
        >
          Wprowadź treść komentarza.
        </div>
      </div>
      <div
        class="CommentForm__submitGroup mb-0 form-group"
      >
        <button
          class="btn btn-primary"
          type="submit"
        >
          Prześlij
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`CommentForm create comment should render without crashing 1`] = `
<div>
  <div>
    <h5>
      Dodaj komentarz
    </h5>
    <form
      class=""
      novalidate=""
    >
      <div
        class="form-group"
      >
        <textarea
          class="form-control"
          id="commentContent"
          placeholder="Treść komentarza"
          required=""
        />
        <div
          class="invalid-feedback"
        >
          Wprowadź treść komentarza.
        </div>
      </div>
      <div
        class="CommentForm__submitGroup mb-0 form-group"
      >
        <button
          class="btn btn-primary"
          type="submit"
        >
          Prześlij
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`CommentForm edit comment should render without crashing 1`] = `
<div>
  <div>
    <h5>
      Edytuj komentarz
    </h5>
    <form
      class=""
      novalidate=""
    >
      <div
        class="form-group"
      >
        <textarea
          class="form-control"
          id="commentContent"
          placeholder="Treść komentarza"
          required=""
        >
          Treść komentarza
        </textarea>
        <div
          class="invalid-feedback"
        >
          Wprowadź treść komentarza.
        </div>
      </div>
      <div
        class="CommentForm__submitGroup mb-0 form-group"
      >
        <button
          class="btn btn-primary"
          type="submit"
        >
          Prześlij
        </button>
        <button
          class="ml-2 btn btn-secondary"
          type="button"
        >
          Anuluj
        </button>
      </div>
    </form>
  </div>
</div>
`;
